# pkg/codegen/openapi.yaml
@@ -278,38 +278,38 @@ components:
               type: string
             pauseable:
               type: boolean
+    coursespec:
+      type: object
+      properties:
+        id:
+          type: string
+        name:
+          type: string
+        description:
+          type: string
+        scenarios:
+          type: array
+          items:
+            type: string
+        virtualmachines:
+          type: array
+          items:
+            type: object
+            additionalProperties
+              type: string
+        keepalive_duration:
+          type: string
+        pause_duration:
+          type: string
+        pauseable:
+          type: boolean
     course:
       type: object
       properties:
         name:
           type: string
         spec:
-          type: object
-          properties:
-            id:
-              type: string
-            name:
-              type: string
-            description:
-              type: string
-            scenarios:
-              type: array
-              items:
-                type: string
-            virtualmachines:
-              type: object
-              additionalProperties:
-                type: string
-#              items:
-#                type: object
-#                additionalProperties:
-#                  type: string
-            keepalive_duration:
-              type: string
-            pause_duration:
-              type: string
-            pauseable:
-              type: boolean
+          $ref: '#/components/schemas/coursespec'
     virtualmachineprovision:
       type: object
       properties:
